App-deployK8s/myservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-service
spec:
  type: NodePort
  selector:
    app: simple-server
  ports:
  - protocol: "TCP"
    port: 6000
    targetPort: 5000
